--- a/src/components/screen1.css
+++ b/src/components/screen1.css
@@ -21,7 +21,7 @@
 
 .character{
      margin: 15px;
-     background-color: rgb(62, 56, 56);
+     background-color: rgb(60, 62, 68);
      border-radius: 1rem;
      display: flex;
      width: 500px;
@@ -50,9 +50,34 @@
     margin-top: 0;
 }
 
+.circlegreen{
+    height: 0.5rem;
+    width: 0.5rem;
+    margin-right: 0.375rem;
+    background: rgb(85, 204, 68);
+    border-radius: 50%;
+    position: relative;
+   
+
+}
+
+.circlered{
+    height: 0.5rem;
+    width: 0.5rem;
+    margin-right: 0.375rem;
+    background: rgb(194, 27, 27);
+    border-radius: 50%;
+    position: relative;
+}
+
 .status{
     color: white;
     margin: 5px;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    text-transform: capitalize;
+    justify-content: center;
 }
 
 .greytext{
