--- a/src/components/screen1.css
+++ b/src/components/screen1.css
@@ -70,6 +70,15 @@
     position: relative;
 }
 
+.circlegray{
+    height: 0.5rem;
+    width: 0.5rem;
+    margin-right: 0.375rem;
+    background: rgb(133, 133, 133);
+    border-radius: 50%;
+    position: relative;
+}
+
 .status{
     color: white;
     margin: 5px;
